# foot_switch

./: 19-footswitch.rules  CMakeLists.txt  README.md  package.xml
src/: fshw.cpp
